<resources>
    <string name="app_name">Garage</string>

    <string name="hintCarModel">Model</string>
    <string name="hintBrand">Brand</string>
    <string name="hintCubicCapacity">Cubic capacity</string>
    <string name="hintFuel">Fuel</string>
    <string name="hintKm">Km</string>
    <string name="hintDescription">Description</string>
    <string name="hintYear">Year</string>

    <string name="deleteDialogTitle">You want to delete your car?</string>


    <string name="model">Model: %s</string>
    <string name="cubicCapacity">Cubic capacity: %s</string>
    <string name="fuel">Fuel: %s</string>
    <string name="km">Km: %s</string>
    <string name="description">Description: %s</string>
    <string name="year">Year: %s</string>


    <string name="yourDetails">Your car details</string>
    <string name="toastErrorFieldEmpty">Compile all the fields!</string>

    <string name="yourNotification">Your notifications</string>

    <string name="notificationTextTitle">Check me!</string>
    <string name="notificationTextDescription">Some actions to do on: %1$s %2$s</string>

    <string name="notificationDbTextDescription">To do a car service</string>
    
    
    <string name="pickImage">Pick an image</string>
    <string name="back">back</string>
    <string name="add">add</string>

</resources>