<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.garage.viewmodels.CarViewModel" />

    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.AddCarFragment"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/carModelIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@id/car_name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/car_name_label"
                    app:srcCompat="@drawable/car"

                    tools:src="@drawable/car" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_name_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintCarModel"
                    app:layout_constraintStart_toEndOf="@id/carModelIcon"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/car_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_brand_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintBrand"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/car_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/car_name_label">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/cubicCapacityIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/car_cubic_capacity_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/car_cubic_capacity_label"
                    app:srcCompat="@drawable/pistons" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_cubic_capacity_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintCubicCapacity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cubicCapacityIcon"
                    app:layout_constraintTop_toBottomOf="@id/car_name_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/car_cubic_capacity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/carFuelIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/car_fuel_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/car_fuel_label"
                    app:srcCompat="@drawable/fuel" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_fuel_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintFuel"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/carFuelIcon"
                    app:layout_constraintTop_toBottomOf="@id/car_cubic_capacity_label">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown_fuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/carKmIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@id/car_km_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/car_km_label"
                    app:srcCompat="@drawable/km" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_km_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintKm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/carKmIcon"
                    app:layout_constraintTop_toBottomOf="@id/car_fuel_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/car_km"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:maxLength="7"
                        android:singleLine="true"
                        android:textStyle="bold"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/CarDescriptionIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@id/car_description_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/car_description_label"
                    app:srcCompat="@drawable/description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_description_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/CarDescriptionIcon"
                    app:layout_constraintTop_toBottomOf="@id/car_km_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/car_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:padding="15dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/CarYearIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@id/car_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/car_year"
                    app:srcCompat="@drawable/calendar" />



                <NumberPicker
                    android:id="@+id/car_year"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:descendantFocusability="blocksDescendants"
                    app:layout_constraintTop_toBottomOf="@id/car_description_label"
                    />


                <ImageView
                    android:id="@+id/CarImageIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="@id/car_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/car_image"
                    app:srcCompat="@drawable/icons8_image_64" />

                <Button
                    android:id="@+id/car_image"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:descendantFocusability="blocksDescendants"
                    android:text="@string/pickImage"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_year" />

                <ImageView
                    android:id="@+id/carImageFromGallery"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:cropToPadding="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/car_image"
                    tools:src="@drawable/icons8_image_64"
                    tools:visibility="visible" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backButton"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carImageFromGallery" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/InsertButton"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/add"
                    app:layout_constraintBottom_toBottomOf="@+id/backButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
</layout>